Spring Boot 백엔드 초기 세팅 및 DB 구조 정리